force-app/main/default/objects/Case/fields/submit_Date__c.field-meta.xml
<CustomField>
    <fullName>submit_Date__c</fullName>
    <label>submit Date</label>
    <type>DateTime</type>
</CustomField>