force-app/main/default/objects/Case/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to fill  the report with informations</description>
    <label>Is Submitted ?</label>
    <type>Checkbox</type>
</CustomField>