force-app/main/default/objects/Case/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <label>Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial fixture failure</fullName>
            </value>
            <value>
                <fullName>Total fixture failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>