force-app/main/default/objects/Case/fields/Target_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Trial_Start_Date__c</fullName>
    <label>Target Trial Start Date:</label>
    <type>Date</type>
</CustomField>