force-app/main/default/objects/Case/fields/TECH_LDRF_Filled__c.field-meta.xml
<CustomField>
    <fullName>TECH_LDRF_Filled__c</fullName>
    <formula>IF(!ISBLANK(Opportunity__r.LDRF_Case__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDRF Filled?</label>
    <type>Checkbox</type>
</CustomField>