force-app/main/default/objects/Case/fields/Technical_Support_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_Resolution__c</fullName>
    <label>Technical Support Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>Sales Support Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>