force-app/main/default/objects/Case/fields/Technical_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_Type__c</fullName>
    <label>Technical Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-sales Support/Application Support</fullName>
            </value>
            <value>
                <fullName>Installation Support</fullName>
            </value>
            <value>
                <fullName>Post-Sale Product/Application Support</fullName>
            </value>
            <value>
                <fullName>Field Product Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>