force-app/main/default/objects/Case/fields/teste__c.field-meta.xml
<CustomField>
    <fullName>teste__c</fullName>
    <formula>IF( Owner:Queue.Name =  &quot;S3 General Queue&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>teste</label>
    <type>Checkbox</type>
</CustomField>