force-app/main/default/objects/Case/fields/Total_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Rooms__c</fullName>
    <label>Total Number of Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>