force-app/main/default/objects/Case/fields/Trial_Height__c.field-meta.xml
<CustomField>
    <fullName>Trial_Height__c</fullName>
    <label>Trial Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>