force-app/main/default/objects/Case/fields/Trial_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Trial_Lenght__c</fullName>
    <label>Trial Lenght</label>
    <length>40</length>
    <type>Text</type>
</CustomField>