force-app/main/default/objects/Case/fields/Trial_Opportunity_Entered_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Opportunity_Entered_Completed_Date__c</fullName>
    <label>Trial Opportunity Entered Completed Date</label>
    <type>Date</type>
</CustomField>