force-app/main/default/objects/Case/fields/Trial_Opportunity_Entered_into_SF__c.field-meta.xml
<CustomField>
    <fullName>Trial_Opportunity_Entered_into_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Opportunity Entered into SF</label>
    <type>Checkbox</type>
</CustomField>