force-app/main/default/objects/Case/fields/Trial_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Trial_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>