force-app/main/default/objects/Case/fields/Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Trial_Type__c</fullName>
    <label>Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenhouse</fullName>
            </value>
            <value>
                <fullName>Grow Room</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>