force-app/main/default/objects/Case/fields/Trial_Width__c.field-meta.xml
<CustomField>
    <fullName>Trial_Width__c</fullName>
    <label>Trial Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>