force-app/main/default/objects/Case/fields/Troubleshooting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Notes__c</fullName>
    <description>Add notes from troubleshooting here.</description>
    <inlineHelpText>Add notes from troubleshooting here.</inlineHelpText>
    <label>Troubleshooting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>