force-app/main/default/objects/Case/fields/Type_of_Ship_Error__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Ship_Error__c</fullName>
    <label>Ship Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Mispack</fullName>
            </value>
            <value>
                <fullName>Mispack-Over-Shipped</fullName>
            </value>
            <value>
                <fullName>Mispack-Short-shipped</fullName>
            </value>
            <value>
                <fullName>Mispack-Incorrect Part</fullName>
            </value>
            <value>
                <fullName>Wrong Label</fullName>
            </value>
            <value>
                <fullName>Issue with Documentation</fullName>
            </value>
            <value>
                <fullName>Wrong IC Codes</fullName>
            </value>
            <value>
                <fullName>Incorrect Ship to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>