force-app/main/default/objects/Case/fields/Visit_Customer__c.field-meta.xml
<CustomField>
    <fullName>Visit_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Customer</label>
    <type>Checkbox</type>
</CustomField>