force-app/main/default/objects/Case/fields/Visit_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Customer_Date__c</fullName>
    <label>Visit Customer Date</label>
    <type>Date</type>
</CustomField>