force-app/main/default/objects/Case/fields/Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Voicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voicemail?</label>
    <type>Checkbox</type>
</CustomField>