force-app/main/default/objects/Case/fields/Was_flagged_as_Info_Missing__c.field-meta.xml
<CustomField>
    <fullName>Was_flagged_as_Info_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was flagged as Info Missing?</label>
    <type>Checkbox</type>
</CustomField>