force-app/main/default/objects/Case/fields/Who_Visited_Customer__c.field-meta.xml
<CustomField>
    <fullName>Who_Visited_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Visited Customer:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>