force-app/main/default/objects/Case/recordTypes/Commissioning.recordType-meta.xml
<RecordType>
    <fullName>Commissioning</fullName>
    <active>true</active>
    <businessProcess>Commissioning</businessProcess>
    <label>Commissioning</label>
</RecordType>