force-app/main/default/objects/Case/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>General Cases</description>
    <label>General</label>
</RecordType>