force-app/main/default/objects/Case/recordTypes/HS_Case.recordType-meta.xml
<RecordType>
    <fullName>HS_Case</fullName>
    <active>true</active>
    <businessProcess>HS Case</businessProcess>
    <label>HS Case</label>
</RecordType>