force-app/main/default/objects/Case/recordTypes/LDRF.recordType-meta.xml
<RecordType>
    <fullName>LDRF</fullName>
    <active>true</active>
    <businessProcess>LDRF</businessProcess>
    <description>Lighting Design Request Form</description>
    <label>LDRF</label>
</RecordType>