force-app/main/default/objects/Case/recordTypes/RARF.recordType-meta.xml
<RecordType>
    <fullName>RARF</fullName>
    <active>true</active>
    <businessProcess>RARF</businessProcess>
    <description>Rebate Assistance Request Form</description>
    <label>RARF</label>
</RecordType>