force-app/main/default/objects/Case/validationRules/ACC_REQD_FOR_WARRANTY_N_SHIPPING_ERROR.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_REQD_FOR_WARRANTY_N_SHIPPING_ERROR</fullName>
    <active>true</active>
    <description>Account is required when raising a case for Type = Warranty / Shipping Error</description>
    <errorConditionFormula>AND
(
$Setup.Bypass_Configuration__c.Account_Validation_Rule__c= FALSE,
 RecordType.DeveloperName = &apos;General&apos;,
 OR
 (
  ISPICKVAL( Type , &apos;Warranty Support&apos;) ,
  ISPICKVAL( Type , &apos;Shipping Error&apos;) 
 ),
OR(
 ISBLANK( AccountId ),
 ISBLANK(TEXT( Product_Type__c ))  
) 
)</errorConditionFormula>
    <errorMessage>Account and Product Type should be filled if Case Type is Warranty Support OR Shipping Error.</errorMessage>
</ValidationRule>