force-app/main/default/objects/Case/validationRules/COMPLETE_ROOM_FORMS_BEFORE_SUBMIT.validationRule-meta.xml
<ValidationRule>
    <fullName>COMPLETE_ROOM_FORMS_BEFORE_SUBMIT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;LDRF&apos;,
 Submit_case__c = TRUE,
 Total_of_Rooms__c &lt;  No_of_Room_Types__c,
$Setup.Bypass_Configuration__c.Case_Validation_Rule__c	= FALSE 
)</errorConditionFormula>
    <errorDisplayField>No_of_Room_Types__c</errorDisplayField>
    <errorMessage>Cannot Submit LDRF if value of No. of Room Types is greater than Total # of Rooms.</errorMessage>
</ValidationRule>