force-app/main/default/objects/Case/validationRules/PRE_APPROVAL_CANNOT_BE_REVERSED.validationRule-meta.xml
<ValidationRule>
    <fullName>PRE_APPROVAL_CANNOT_BE_REVERSED</fullName>
    <active>true</active>
    <description>PRE_APPROVAL_CANNOT_BE_REVERSED</description>
    <errorConditionFormula>AND( PRIORVALUE( Pre_approval_obtained__c )=true,
  ISCHANGED(Pre_approval_obtained__c  ),
 RecordType.DeveloperName =&apos;RARF&apos; ,
$Setup.Bypass_Configuration__c.Case_Validation_Rule__c	= FALSE
)</errorConditionFormula>
    <errorDisplayField>Pre_approval_obtained__c</errorDisplayField>
    <errorMessage>Pre-approval obtained flag cannot be modified.</errorMessage>
</ValidationRule>