force-app/main/default/objects/Case/validationRules/PRE_APPROVAL_SUBMITTED_DATE_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>PRE_APPROVAL_SUBMITTED_DATE_REQUIRED</fullName>
    <active>true</active>
    <description>PRE_APPROVAL_SUBMITTED_DATE_REQUIRED</description>
    <errorConditionFormula>AND(
  $Setup.Bypass_Configuration__c.Case_Validation_Rule__c	= FALSE,
  Pre_approval_submitted__c ,
 ISBLANK( Pre_approval_submitted_date__c ) 
)</errorConditionFormula>
    <errorDisplayField>Pre_approval_submitted_date__c</errorDisplayField>
    <errorMessage>Pre-Approval Submitted Date is Required.</errorMessage>
</ValidationRule>