force-app/main/default/objects/Case/validationRules/PreventUpdateClosedLDRFCase.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdateClosedLDRFCase</fullName>
    <active>false</active>
    <description>Prevent users to edit closed LDRF Cases.</description>
    <errorConditionFormula>AND(
				!ISNEW(),
				IsClosed,
				RecordType.DeveloperName = &apos;LDRF&apos;
				)</errorConditionFormula>
    <errorMessage>Closed LDRF Cases cannot be edited.</errorMessage>
</ValidationRule>