force-app/main/default/objects/Case/validationRules/Restrict_LDRF_Case_FAEReviewClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LDRF_Case_FAEReviewClosed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Closed&quot;),ISCHANGED(Status),!Is_FAE_Review_complete__c)</errorConditionFormula>
    <errorDisplayField>Is_FAE_Review_complete__c</errorDisplayField>
    <errorMessage>Before close the case, select one of the FAE review checkboxes</errorMessage>
</ValidationRule>