force-app/main/default/objects/Case/validationRules/Restrict_LDRF_Case_FAEReviewComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LDRF_Case_FAEReviewComplete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Complete&quot;),!Is_FAE_Review_complete__c,ISCHANGED(Status), ISPICKVAL( PRIORVALUE(Status) ,&apos;FAE Review&apos;))</errorConditionFormula>
    <errorDisplayField>Is_FAE_Review_complete__c</errorDisplayField>
    <errorMessage>Please select one of the FAE review checkboxes</errorMessage>
</ValidationRule>