force-app/main/default/objects/Case/validationRules/Restrict_LDRF_Case_FAEReviewCompleteOrRe.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LDRF_Case_FAEReviewCompleteOrRe</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_FAE_Review_rejected__c,Is_FAE_Review_complete__c)</errorConditionFormula>
    <errorMessage>Please select one of the FAE review checkboxes</errorMessage>
</ValidationRule>