force-app/main/default/objects/Case/validationRules/Restrict_LDRF_Case_InProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LDRF_Case_InProgress</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &apos;LDRF&apos;,LEFT(OwnerId,3) = &apos;00G&apos; , ISPICKVAL(Status, &quot;In Progress&quot;), ISCHANGED( Status )  )</errorConditionFormula>
    <errorMessage>LDRF designer has to assigns LDRF to  themselves by changing case owner field to their name before change the status to In Progress</errorMessage>
</ValidationRule>