force-app/main/default/objects/Case/validationRules/Restrict_Owners_for_Case_General_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Owners_for_Case_General_Records</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$Setup.Bypass_Configuration__c.Case_Process__c = FALSE,
				RecordType.DeveloperName  = &apos;General&apos;,
				NOT(ISNEW()),
				ISCHANGED(OwnerId) ,
				(PRIORVALUE(OwnerId)) != (OwnerId),
				OR
				(
								(CONTAINS(Owner:Queue.QueueName ,&apos;CS_General_Queue&apos;)),
								(CONTAINS(Owner:Queue.QueueName ,&apos;FAE_Queue&apos;))),
				Owner:User.UserRole.DeveloperName!=&apos;Sales_Managers&apos;)</errorConditionFormula>
    <errorMessage>General cases should assign to members of CS/FAE Queue members.</errorMessage>
</ValidationRule>