force-app/main/default/objects/Case/validationRules/Restrict_RARF_Case_Formal_Utility.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_RARF_Case_Formal_Utility</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(Opportunity__r.Probability &lt; 0.60, ISPICKVAL( Rebate_Services_Needed__c , &quot;Rebate Application&quot;)),true,false )</errorConditionFormula>
    <errorDisplayField>Rebate_Service_Assistance_Type__c</errorDisplayField>
    <errorMessage>The opportunity must be at Customer Review before rebate pre-approval application may be initiated</errorMessage>
</ValidationRule>