force-app/main/default/objects/Case/validationRules/Restrict_SPAM_Update_to_General_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_SPAM_Update_to_General_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

$Setup.Bypass_Configuration__c.Case_Validation_Rule__c	= FALSE,

RecordType.Name != &apos;General&apos;,

NOT(ISNEW()),

ISCHANGED(Spam__c) 
)</errorConditionFormula>
    <errorMessage>You can just update SPAM to General cases.</errorMessage>
</ValidationRule>