force-app/main/default/objects/Case/validationRules/Restrict_TS_Case_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_TS_Case_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Status),ISPICKVAL(Status,&quot;Closed&quot;),  $User.Email &lt;&gt; &quot;christopher.bezuyen@fluencebioengineering.com&quot;)</errorConditionFormula>
    <errorMessage>You are not allowed to move case to &quot;Closed&quot; status.</errorMessage>
</ValidationRule>