force-app/main/default/objects/Case/validationRules/Status_and_Owner_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_and_Owner_cannot_be_modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.Name = &apos;RMA&apos;,
				OR(
								ISCHANGED( Status ),
								ISCHANGED( OwnerId ) 
				) ,
				$Setup.Bypass_Configuration__c.Case_Validation_Rule__c	= FALSE
)</errorConditionFormula>
    <errorMessage>You cannot update RMA records.</errorMessage>
</ValidationRule>