force-app/main/default/objects/Case/listViews/CS_Cannabis_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CS_Cannabis_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>S3 Cannabis Queue</label>
    <queue>S3_Cannabis_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>