force-app/main/default/objects/Case/listViews/CS_ComAg_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CS_ComAg_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>S3 Direct Com Ag Queue</label>
    <queue>S3_Direct_Com_Ag_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>