force-app/main/default/objects/Case/listViews/CS_EMEA_APAC_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CS_EMEA_APAC_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>S3 EMEA/APAC Queue</label>
    <queue>S3_EMEA_APAC_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>