force-app/main/default/objects/Case/listViews/CS_Retail_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CS_Retail_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>S3 Retail Queue</label>
    <queue>S3_Retail_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>