force-app/main/default/objects/Case/listViews/FAE_Comm_Ag_Queue_Case.listView-meta.xml
<ListView>
    <fullName>FAE_Comm_Ag_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>FAE Comm Ag Queue</label>
    <queue>FAE_Comm_Ag_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>