force-app/main/default/objects/Case/listViews/FAE_Queue_Case.listView-meta.xml
<ListView>
    <fullName>FAE_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>FAE Queue</label>
    <queue>FAE_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>